ci: travis formatter include
* include travis formatter to fold test as well as build sections

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ env:
 before_install:
   - brew update
   - brew install doxygen
-script: xcodebuild test -project CouchbaseLite.xcodeproj -scheme "$SCHEME" -sdk iphonesimulator -destination "platform=macOS" | xcpretty -c
+  - gem install xcpretty-travis-formatter
+script: xcodebuild test -project CouchbaseLite.xcodeproj -scheme "$SCHEME" -sdk iphonesimulator -destination "platform=macOS" | xcpretty -f `xcpretty-travis-formatter`
