--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,4 @@ env:
 before_install:
   - brew update
   - brew install doxygen
-  - gem install xcpretty-travis-formatter
-script: xcodebuild test -project CouchbaseLite.xcodeproj -scheme "$SCHEME" -sdk iphonesimulator -destination "platform=macOS" | xcpretty -f `xcpretty-travis-formatter`
+script: xcodebuild test -project CouchbaseLite.xcodeproj -scheme "$SCHEME" -sdk iphonesimulator -destination "platform=macOS" | xcpretty -c
