--- a/xcconfigs/Project.xcconfig
+++ b/xcconfigs/Project.xcconfig
@@ -99,7 +99,7 @@ GCC_WARN_UNDECLARED_SELECTOR                               = YES
 GCC_WARN_UNINITIALIZED_AUTOS                               = YES_AGGRESSIVE
 GCC_WARN_UNUSED_FUNCTION                                   = YES
 GCC_WARN_UNUSED_VARIABLE                                   = YES
-WARNING_CFLAGS                                             = -Wall -Wformat-security -Wmissing-declarations -Woverriding-method-mismatch -Weffc++
+WARNING_CFLAGS                                             = -Wall -Wformat-security -Wmissing-declarations -Woverriding-method-mismatch -Wunguarded-availability -Weffc++
 
 // Sanitizer Behaviors:
 CLANG_ADDRESS_SANITIZER_CONTAINER_OVERFLOW                 = YES    // range-check C++ STL containers
