--- a/xcconfigs/Project_Debug.xcconfig
+++ b/xcconfigs/Project_Debug.xcconfig
@@ -19,11 +19,13 @@
 
 #include "Project.xcconfig"
 
-DEBUG_INFORMATION_FORMAT     = dwarf
-ENABLE_TESTABILITY           = YES
-GCC_OPTIMIZATION_LEVEL       = 0
-GCC_PREPROCESSOR_DEFINITIONS = DEBUG=1 CBL_VERSION_STRING="\"$(CBL_VERSION_STRING)\"" CBL_BUILD_NUMBER="$(CBL_BUILD_NUMBER)" CBL_PRODUCT_NAME="\"$(PRODUCT_NAME)\"" $(EE_PP_DEFS) $(inherited)
-MTL_ENABLE_DEBUG_INFO        = YES
-ONLY_ACTIVE_ARCH             = YES
-SWIFT_OPTIMIZATION_LEVEL     = -Onone
+DEBUG_INFORMATION_FORMAT            = dwarf
+ENABLE_TESTABILITY                  = YES
+GCC_OPTIMIZATION_LEVEL              = 0
+GCC_PREPROCESSOR_DEFINITIONS        = DEBUG=1 CBL_VERSION_STRING="\"$(CBL_VERSION_STRING)\"" CBL_BUILD_NUMBER="$(CBL_BUILD_NUMBER)" CBL_PRODUCT_NAME="\"$(PRODUCT_NAME)\"" $(EE_PP_DEFS) $(inherited)
+MTL_ENABLE_DEBUG_INFO               = YES
+ONLY_ACTIVE_ARCH                    = YES
 SWIFT_ACTIVE_COMPILATION_CONDITIONS = DEBUG
+SWIFT_COMPILATION_MODE              = singlefile
+SWIFT_OPTIMIZATION_LEVEL            = -Onone
+
