Fix XCode couldn’t resolve precessor definition correctly
* Instead of using variable (EE_PP_DEFS) for declaring COUCBHASE_ENTERPRISE variable, defining COUCBHASE_ENTERPRISE directly.
* Added GCC_PREPROCESSOR_DEFINITIONS_DEF to storing the default setting.
* Reformat the file.

#2419

--- a/xcconfigs/Project_Release_EE.xcconfig
+++ b/xcconfigs/Project_Release_EE.xcconfig
@@ -4,10 +4,10 @@
 //  Copyright (c) 2018 Couchbase, Inc All rights reserved.
 //
 
-EE_PP_DEFS = COUCHBASE_ENTERPRISE
-OTHER_SWIFT_FLAGS = -D$(EE_PP_DEFS)
-
 #include "Project_Release.xcconfig"
 
 CBL_EXPORTED_SYMBOLS_FILE = Objective-C/CouchbaseLite-EE.exp
 CBL_SWIFT_MODULEMAP_FILE = Swift/CouchbaseLiteSwift-EE.modulemap
+
+GCC_PREPROCESSOR_DEFINITIONS  = ${GCC_PREPROCESSOR_DEFINITIONS_DEF} COUCHBASE_ENTERPRISE
+OTHER_SWIFT_FLAGS = -DCOUCHBASE_ENTERPRISE
