--- a/xcconfigs/Project_Debug.xcconfig
+++ b/xcconfigs/Project_Debug.xcconfig
@@ -22,7 +22,8 @@
 DEBUG_INFORMATION_FORMAT            = dwarf
 ENABLE_TESTABILITY                  = YES
 GCC_OPTIMIZATION_LEVEL              = 0
-GCC_PREPROCESSOR_DEFINITIONS        = DEBUG=1 CBL_VERSION_STRING="\"$(CBL_VERSION_STRING)\"" CBL_BUILD_NUMBER="$(CBL_BUILD_NUMBER)" CBL_PRODUCT_NAME="\"$(PRODUCT_NAME)\"" $(EE_PP_DEFS) $(inherited)
+GCC_PREPROCESSOR_DEFINITIONS_DEF    = DEBUG=1 CBL_VERSION_STRING="\"$(CBL_VERSION_STRING)\"" CBL_BUILD_NUMBER="$(CBL_BUILD_NUMBER)" CBL_PRODUCT_NAME="\"$(PRODUCT_NAME)\"" $(inherited)
+GCC_PREPROCESSOR_DEFINITIONS        = ${GCC_PREPROCESSOR_DEFINITIONS_DEF}
 MTL_ENABLE_DEBUG_INFO               = YES
 ONLY_ACTIVE_ARCH                    = YES
 SWIFT_ACTIVE_COMPILATION_CONDITIONS = DEBUG
