--- a/xcconfigs/Project_Debug_EE.xcconfig
+++ b/xcconfigs/Project_Debug_EE.xcconfig
@@ -4,9 +4,10 @@
 //  Copyright (c) 2018 Couchbase, Inc All rights reserved.
 //
 
-EE_PP_DEFS = COUCHBASE_ENTERPRISE
-OTHER_SWIFT_FLAGS = -D$(EE_PP_DEFS)
 
 #include "Project_Debug.xcconfig"
 
 CBL_SWIFT_MODULEMAP_FILE = Swift/CouchbaseLiteSwift-EE.modulemap
+
+GCC_PREPROCESSOR_DEFINITIONS = ${GCC_PREPROCESSOR_DEFINITIONS_DEF} COUCHBASE_ENTERPRISE
+OTHER_SWIFT_FLAGS = -DCOUCHBASE_ENTERPRISE
