--- a/xcconfigs/Project_Release.xcconfig
+++ b/xcconfigs/Project_Release.xcconfig
@@ -19,19 +19,20 @@
 
 #include "Project.xcconfig"
 
-DEAD_CODE_STRIPPING             = YES                   // Strip dead code
-DEBUG_INFORMATION_FORMAT        = dwarf-with-dsym       // Debug symbols in external .dSYM file
-DEPLOYMENT_POSTPROCESSING       = YES                   // Enable symbol stripping
-STRIP_STYLE                     = non-global
-ENABLE_NS_ASSERTIONS            = NO                    // Disable NSAssert
-ENABLE_TESTABILITY              = NO
-GCC_OPTIMIZATION_LEVEL          = s                     // s=Small, fast=Fastest
-GCC_PREPROCESSOR_DEFINITIONS    = NDEBUG=1 CBL_VERSION_STRING="\"$(CBL_VERSION_STRING)\"" CBL_BUILD_NUMBER="$(CBL_BUILD_NUMBER)" CBL_PRODUCT_NAME="\"$(PRODUCT_NAME)\"" $(EE_PP_DEFS) $(inherited) // NDEBUG is recognized by Unix headers
-LD_GENERATE_MAP_FILE            = YES                   // Generate link map, to analyze code size
-LD_MAP_FILE_PATH                = $(CONFIGURATION_BUILD_DIR)/$(PRODUCT_NAME)-LinkMap-$(CURRENT_ARCH).txt
-LLVM_LTO                        = YES                   // Link-time optimization FTW!
-MTL_ENABLE_DEBUG_INFO           = NO                    // ???
-STRIP_INSTALLED_PRODUCT         = YES                   // Strip debug symbols
-SWIFT_COMPILATION_MODE          = wholemodule           // Swift Compilation Mode
-SWIFT_OPTIMIZATION_LEVEL        = -O                    // Optimize for Speed
-VALIDATE_PRODUCT                = YES                   // Perform validation checks on the product
+DEAD_CODE_STRIPPING              = YES                   // Strip dead code
+DEBUG_INFORMATION_FORMAT         = dwarf-with-dsym       // Debug symbols in external .dSYM file
+DEPLOYMENT_POSTPROCESSING        = YES                   // Enable symbol stripping
+STRIP_STYLE                      = non-global
+ENABLE_NS_ASSERTIONS             = NO                    // Disable NSAssert
+ENABLE_TESTABILITY               = NO
+GCC_OPTIMIZATION_LEVEL           = s                     // s=Small, fast=Fastest
+GCC_PREPROCESSOR_DEFINITIONS_DEF = NDEBUG=1 CBL_VERSION_STRING="\"$(CBL_VERSION_STRING)\"" CBL_BUILD_NUMBER="$(CBL_BUILD_NUMBER)" CBL_PRODUCT_NAME="\"$(PRODUCT_NAME)\"" $(inherited) // NDEBUG is recognized by Unix headers
+GCC_PREPROCESSOR_DEFINITIONS     = ${GCC_PREPROCESSOR_DEFINITIONS_DEF}
+LD_GENERATE_MAP_FILE             = YES                   // Generate link map, to analyze code size
+LD_MAP_FILE_PATH                 = $(CONFIGURATION_BUILD_DIR)/$(PRODUCT_NAME)-LinkMap-$(CURRENT_ARCH).txt
+LLVM_LTO                         = YES                   // Link-time optimization FTW!
+MTL_ENABLE_DEBUG_INFO            = NO                    // ???
+STRIP_INSTALLED_PRODUCT          = YES                   // Strip debug symbols
+SWIFT_COMPILATION_MODE           = wholemodule           // Swift Compilation Mode
+SWIFT_OPTIMIZATION_LEVEL         = -O                    // Optimize for Speed
+VALIDATE_PRODUCT                 = YES                   // Perform validation checks on the product
